[project]
authors = [
    { name = "ClanEver", email = "562211524@qq.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Celery",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "celery[redis]>=5.5.2",
    "redis>=5.1.1",
]
description = "Celery Beat with leader election"
keywords = [
    "beat",
    "celery",
    "redis",
    "scheduler",
]
license = "MIT"
license-files = ["LICENSE"]
name = "celery-leased-beat"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0a1"

[project.optional-dependencies]
django = [
    "django-celery-beat>=2.7.0",
    "django>=5.0.1",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[dependency-groups]
dev = [
    "pytest-django>=4.8.0",
    "pytest-docker-tools>=3.1.9",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.1",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
